<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grocery List</string>


    <!-- Strings for List activity start -->

    <string name="list_fab_content_description">Access history</string>
    <string name="list_empty_message">The list is empty…</string>
    <string name="list_empty_view_text">The list is empty.</string>

    <string name="list_high_priority_mark" translatable="false">!!!</string>
    <string name="list_low_priority_mark" translatable="false">\?\?\?</string>

    <string name="list_menu_preferences">Preferences</string>

    <!-- Strings for edition -->
    <string name="list_edition_annotation_label">Annotation:</string>
    <string name="list_edition_priority_label">Priority:</string>
    <string name="list_edition_priority_high_label" translatable="false">!!!</string>
    <string name="list_edition_priority_normal_label">Default</string>
    <string name="list_edition_priority_low_label" translatable="false">\?\?\?</string>
    <string name="list_edition_annotation_hint">E.g. quantity</string>

    <!-- Strings for addition -->
    <string name="list_menu_add_hint">Add a product</string>
    <string name="list_no_new_product_message">No new products.</string>
    <plurals name="list_new_products_message">
        <item quantity="one">%d new product added to list.</item>
        <item quantity="other">%d new products added to list.</item>
    </plurals>

    <!-- Strings for deletion -->
    <string name="list_menu_clear">Clear list</string>
    <string name="list_clear_title">Clear current list?</string>
    <string name="list_removed_product_message">\'%1$s\' removed from list.</string>

    <!-- Strings for notification -->
    <string name="list_menu_launch_notification">Notification</string>
    <string name="list_notification_button">Open</string>
    <string name="list_notification_title_empty">Grocery list (empty)</string>
    <string name="list_notification_character_separator">,\u0020</string>
    <plurals name="list_notification_title">
        <item quantity="one">Grocery list (%d product):</item>
        <item quantity="other">Grocery list (%d products):</item>
    </plurals>

    <!-- Strings for reminder -->
    <string name="list_menu_activate_reminder">Reminder</string>
    <string name="list_menu_deactivate_reminder">Deactivate</string>
    <string name="list_menu_reminder_information">Get reminder information</string>
    <string name="list_reminder_information_dialog_message">Date and time of reminder:\n\n%1$s</string>
    <string name="list_reminder_set_message">Reminder set: %1$s</string>
    <string name="list_reminder_canceled_message">Reminder canceled.</string>
    <string name="list_reminder_date_picker_message">1. Select day:</string>
    <string name="list_reminder_time_picker_message">2. Select time:</string>
    <string name="list_reminder_pickers_next_button">Next</string>
    <string name="list_reminder_alarm_on" translatable="false">alarm_on</string>
    <string name="list_reminder_alarm_time" translatable="false">alarm_time</string>

    <!-- Strings for email -->
    <string name="list_menu_email">Email</string>
    <string name="list_email_title">Grocery list for %1$s.</string>
    <string name="list_email_character_bullet">-\u0020</string>
    <string name="list_email_character_space_separator">\u0020</string>
    <string name="list_email_character_open_parenthesis">\u0020(</string>
    <string name="list_email_character_close_parenthesis">)</string>

    <!-- Strings for List activity end -->


    <!-- Strings for History activity start -->

    <string name="history_title">History</string>
    <string name="history_instructions">Select products to add:</string>
    <string name="history_empty_view_text">Your history is empty.\nStart by adding products from the main screen.</string>
    <string name="history_fab_content_description">Add products</string>

    <!-- Strings for deletion menu -->
    <string name="history_menu_delete">Delete selection</string>
    <plurals name="history_delete_selection_title">
        <item quantity="one">Delete selected product from history?</item>
        <item quantity="other">Delete selected products from history?</item>
    </plurals>
    <plurals name="history_products_deleted_message">
        <item quantity="one">%d product deleted from history.</item>
        <item quantity="other">%d products deleted from history.</item>
    </plurals>

    <!-- Strings for history layout change menu -->
    <string name="history_menu_compact_layout">Display: two columns</string>
    <string name="history_menu_normal_layout">Display: one column</string>

    <!-- Strings for confirmation dialog -->
    <string name="history_confirm_yes">Yes</string>
    <string name="history_confirm_no">No</string>
    <plurals name="history_add_selected_products">
        <item quantity="one">Add selected product to list?</item>
        <item quantity="other">Add selected products to list?</item>
    </plurals>

    <string name="history_message_to_list" translatable="false">history_message</string>

    <!-- Strings for History activity end -->


    <!-- Strings for Preferences activity start -->

    <string name="pref_title">Preferences</string>
    <string name="pref_list_label">List display</string>
    <string name="pref_information_label">Information</string>

    <!-- Strings for layout preference -->
    <string name="pref_list_layout_label">Presentation</string>
    <string name="pref_list_layout_one_column_label">One column</string>
    <string name="pref_list_layout_two_columns_label">Two columns</string>
    <string name="pref_list_layout_key" translatable="false">list_layout</string>
    <string name="pref_list_layout_one_column_value" translatable="false">one_column</string>
    <string name="pref_list_layout_two_columns_value" translatable="false">two_columns</string>

    <string name="pref_history_compact_layout_key" translatable="false">history_layout</string>


    <!-- Strings for font preference -->
    <string name="pref_font_label">Font</string>

    <string name="pref_font_roboto_label" translatable="false">Roboto</string>
    <string name="pref_font_coming_soon_label" translatable="false">Coming Soon</string>
    <string name="pref_font_lora_label" translatable="false">Lora</string>
    <string name="pref_font_special_elite_label" translatable="false">Special Elite</string>
    <string name="pref_font_rock_salt_label" translatable="false">Rock Salt</string>
    <string name="pref_font_pangolin_label" translatable="false">Pangolin</string>
    <string name="pref_font_atma_label" translatable="false">Atma</string>
    <string name="pref_font_barrio_label" translatable="false">Barrio</string>

    <string name="pref_font_key" translatable="false">font</string>

    <string name="pref_font_roboto_value" translatable="false">Roboto</string>
    <string name="pref_font_coming_soon_value" translatable="false">Coming Soon</string>
    <string name="pref_font_lora_value" translatable="false">Lora</string>
    <string name="pref_font_special_elite_value" translatable="false">Special Elite</string>
    <string name="pref_font_rock_salt_value" translatable="false">Rock Salt</string>
    <string name="pref_font_pangolin_value" translatable="false">Pangolin</string>
    <string name="pref_font_atma_value" translatable="false">Atma</string>
    <string name="pref_font_barrio_value" translatable="false">Barrio</string>

    <!--Strings for sort order preference -->
    <string name="pref_sort_order_label">Sort</string>
    <string name="pref_sort_order_by_name_label">By name</string>
    <string name="pref_sort_order_by_priority_label">By priority</string>
    <!--<string name="pref_sort_order_by_priority_label">By priority\n<em><small>(Long press to set priority)</small></em></string>-->

    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_sort_order_name_value" translatable="false">by_name</string>
    <string name="pref_sort_order_priority_value" translatable="false">by_priority</string>

    <!-- Strings for About dialog in preference screen -->
    <string name="pref_about_key" translatable="false">about_key</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_version_number_label">Version</string>
    <string name="pref_about_copyright_label">Copyright</string>
    <string name="pref_about_email_label">Contact</string>
    <string name="pref_about_icons_label">Icons</string>
    <string name="pref_about_fonts_label">Fonts</string>
    <string name="pref_about_version_name" translatable="false">1.13</string>
    <string name="pref_about_copyright" translatable="false">Aymeric Thébaud</string>
    <string name="pref_about_email" translatable="false">athebapps@gmail.com</string>
    <string name="pref_about_icons_url" translatable="false">https://material.io/icons/</string>
    <string name="pref_about_fonts_url" translatable="false">https://fonts.google.com</string>

    <!-- Strings for Preferences activity end -->

</resources>
